@@ -12,7 +12,7 @@ import se.koarito.examensarbete.data.requestbody.CreateUserRequest;
 import se.koarito.examensarbete.repository.UserRepository;
 import se.koarito.examensarbete.security.PasswordConfig;
 
-import java.util.Map;
+import java.util.Collections;
 
 @Service
 @RequiredArgsConstructor
@@ -22,7 +22,7 @@ public class AuthService {
     private final JwtService jwtService;
     private final AuthenticationManager authenticationManager;
 
-    public AuthDto createUser(CreateUserRequest requestBody) {
+    public long createUser(CreateUserRequest requestBody) {
         User user = User.builder()
                 .firstName(requestBody.getFirstName())
                 .lastName(requestBody.getLastName())
@@ -30,15 +30,13 @@ public class AuthService {
                 .password(passwordConfig.bCryptEncoder().encode(requestBody.getPassword()))
                 .role(Role.valueOf(requestBody.getRole()))
                 .build();
-        long userId = userRepository.save(user).getId();
-        var jwtToken = jwtService.generateToken(Map.of("UserId",userId), user);
-        return new AuthDto(jwtToken);
+        return userRepository.save(user).getId();
     }
 
     public AuthDto authenticate(AuthRequest authRequest) {
         authenticationManager.authenticate(new UsernamePasswordAuthenticationToken(authRequest.getEmail(), authRequest.getPassword()));
         var user = userRepository.findByEmail(authRequest.getEmail()).orElseThrow();
-        var jwtToken = jwtService.generateToken(Map.of("UserId",user.getId()), user);
+        var jwtToken = jwtService.generateToken(Collections.emptyMap(), user);
         return new AuthDto(jwtToken);
     }
 }
